# Iceberg-File-Integration

./: Dockerfile  README.md  pom.xml  pyproject.toml
scripts/: run_maven.py
src/main/java/: AppConfig.java  CreateTable.java  DirectorySchemaReader.java  newFileAppender.java
