[tool.poetry]
name = "ice-ingest"
version = "0.1.0"
description = ""
authors = ["Khalil Miri Erick Enriquez "]
readme = "README.md"
packages = [{include = "ice_ingest"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
